--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,12 @@ dependencies {
     mappings "net.fabricmc:yarn:1.21.7+build.1:v2"
     modImplementation "net.fabricmc:fabric-loader:0.16.14"
     modImplementation "net.fabricmc.fabric-api:fabric-api:0.129.0+1.21.7"
+
+    // Test dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+test {
+    useJUnitPlatform()
 }
